# usb-dmx

./: .gitignore  README.md  compudmx.py  pyproject.toml  readme.md
usb_dmx/: __main__.py  chase_generator.py  cli.py  dataclasses.py  dmxctl.py  usb_dmx.py
