[tool.poetry]
name = "usb_dmx"
version = "0.1.1"
description = "DMX light control over USB serial port"
authors = ["Tim Kramer <53525709+ikbentimkramer@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "serial"
ignore_missing_imports = true
